# ml-intern

./: README.md  pyproject.toml
agent/: README.md  __init__.py  config.py  main.py  mcp_server.py  mcp_types.py
agent/context_manager/: manager.py
agent/core/: agent_loop.py  doom_loop.py  llm_params.py  local_checkpoint.py  message.py  model_switcher.py  prompt_caching.py  provider.py  session.py  telemetry.py  tools.py
agent/prompts/: system_prompt.yaml  system_prompt_v2.yaml  system_prompt_v3.yaml
agent/tools/: __init__.py  private_hf_repo_tools.py  research_tool.py  sandbox_client.py  sandbox_tool.py
agent/utils/: terminal_display.py
backend/: dependencies.py  models.py  session_manager.py
backend/routes/: agent.py
configs/: main_agent_config.json
frontend/src/components/Chat/: ActivityStatusBar.tsx  ChatInput.tsx  ExpiredBanner.tsx  MarkdownContent.tsx  ToolCallGroup.tsx
frontend/src/components/SessionSidebar/: SessionSidebar.tsx
frontend/src/components/WelcomeScreen/: WelcomeScreen.tsx
frontend/src/hooks/: useAgentChat.ts
frontend/src/lib/: backend-message-store.ts  convert-llm-messages.ts  sse-chat-transport.ts
frontend/src/store/: agentStore.ts
frontend/src/utils/: provider.ts
tests/unit/: test_custom_provider.py  test_heartbeat.py  test_local_checkpoint.py  test_mcp_server.py  test_message_resume.py  test_provider_config.py  test_resume_selector.py  test_resume_transcript.py  test_rewind_restore.py  test_sandbox_skypilot.py  test_tool_registration.py
