[project]
name = "ml-intern-mcp"
version = "0.1.0"
description = "Specialist MCP server for Hugging Face research tools and remote ML sandboxes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastmcp>=3.2.0",
    "huggingface-hub>=1.0.1",
    "httpx>=0.27.0",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "pydantic>=2.12.3",
    "requests>=2.33.0",
    "skypilot-nightly[runpod]>=1.0.0.dev0",
    "thefuzz>=0.22.1",
    "whoosh>=2.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
ml-intern-mcp = "agent.mcp_server:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.uv]
package = true
